<resources>
    <string name="app_name">Sea</string>
    <string name="waves_of_food">Waves Of Food</string>
    <string name="deliver_favorite_food">Deliver Favorite Food</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_your_location">Choose Your Location</string>
    <string name="choose_location">Choose Location</string>
    <string name="dummy_text">To provide you with the best dining experience, we need your permission to access your device\'s location. By enabling location services, we can offer personalized restaurant recommendations, accurate delivery estimates, and ensure a seamless food delivery experience.\"</string>
    <string name="image_desc_text">this image add best UI or design</string>
    <string name="food_name">Food Name</string>
    <string name="short_description">Short Description</string>
    <string name="short_description_lorem">Short description Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad</string>
    <string name="ingredients">Ingredients</string>
    <string name="ing_show_berry"><![CDATA[1-> Strowberry\n 2-> Cream\n 3-> wheat]]></string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="login_to_your_account">Login To Your Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or">Or</string>
    <string name="continue_with">Continue With</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="login">Login</string>
    <string name="don_t_have_account">Don’t Have Account?</string>
    <string name="explore_your_favorite_order">Explore Your Favorite Food</string>

    <string name="next">Next</string>
    <string name="design_by_n_muhsan_tech">Design By \n Muhsan-Tech</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="name">Name </string>
    <string name="sign_up_here">Sign Up Here</string>
    <string name="sign_up_with">Sign Up With</string>
    <string name="create_account">Create Account</string>
    <string name="popular">Popular</string>
    <string name="view_menu">View Menu</string>
    <string name="cart_food_name">Cart Food Name</string>
    <string name="price">Price</string>
    <string name="_1">1</string>
    <string name="cart">Cart</string>
    <string name="proceed">Proceed</string>
    <string name="search">Search</string>
    <string name="menu">Menu</string>
    <string name="recent_buy">Recent buy</string>
    <string name="spacy_crab">Spacy fresj crab</string>
    <string name="waroenk_kita">Waroenk kita</string>
    <string name="_35">$35</string>
    <string name="received">Received</string>
    <string name="previously_buy">Previously buy</string>
    <string name="address">Address</string>
    <string name="address_Dummy">Android is a mobile operating system based on a modified version of the Linux kernel and other open-source software, designed primarily for touchscreen mobile devices such as smartphones and tablets.</string>
    <string name="admin_email">admin@gmail.com</string>
    <string name="phone">Phone</string>
    <string name="phone_number">0097123456789</string>
    <string name="save_information">Save Information</string>
    <string name="go_home">Go Home</string>
    <string name="congrats_your_order_placed">Congrats \nYour Order Placed</string>
    <string name="notifications">Notifications</string>
    <string name="textview">TextView</string>
    <string name="buy_again">Buy Again</string>
    <string name="edit">Edit</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>

    <string name="default_web_client_Id">646492882054-q61o0fqaiq6neostd81k87sav19sa72e.apps.googleusercontent.com</string>
    <string name="deal_of_the_day">Deal Of The Day</string>
    <string name="welcome_to_fresh_catch_feast">Welcome To Fresh Catch Feast</string>
    <string name="sea_food">Sea Food</string>
    <string name="addresss">Address ▼</string>
    <string name="title_activity_track">TrackActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="use_current_location">Use Current Location</string>
    <string name="title_activity_language">LanguageActivity</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string-array name="languages_array">
        <item>Tamil</item>
        <item>English</item>
        <item>Malayalam</item>
        <item>Telugu</item>
    </string-array>

</resources>