<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bgColor"
        tools:context=".ui.activities.fragments.HomeFragment">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/inika_regular"
            android:text="@string/explore_your_favorite_order"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="5dp"
            app:cardCornerRadius="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.denzcoskun.imageslider.ImageSlider
                android:id="@+id/image_slider"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:iss_auto_cycle="true"
                app:iss_delay="2000"
                app:iss_no_dots="true"
                app:iss_period="2000"
                app:iss_text_align="CENTER" />
        </androidx.cardview.widget.CardView>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.426">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/popularRecyclerView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="130dp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView13"
                app:spanCount="5"
                tools:itemCount="5"
                tools:listitem="@layout/popular_items" />


        </HorizontalScrollView>

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="670dp"
            android:fontFamily="@font/inika_regular"
            android:text="Frozen Seafood"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />


        <HorizontalScrollView
            android:id="@+id/new1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="695dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView19"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.875">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/popularRecyclerView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView19"
                app:spanCount="5"
                tools:itemCount="5"
                tools:listitem="@layout/popular_items" />


        </HorizontalScrollView>

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/inika_regular"
            android:text="@string/deal_of_the_day"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <TextView
            android:id="@+id/menu_item_textView"
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/textviewshape"
            android:elevation="5dp"
            android:gravity="center"
            android:text="@string/view_menu"
            android:textColor="@color/navy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

